fix: fixed header on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -715,3 +715,15 @@ ul.instafeed-list li {
   width: 100%;
   height: 100%;
 }
+
+.header.switched-header {
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
